<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:drawableStart="@drawable/ic_program_board_black"
		android:text="@string/unknown_datatype"
		android:textColor="@android:color/black"
		android:textSize="20sp"/>


	<ScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/confirm_unknown_datatype"
				android:textSize="15sp"/>

			<TextView
				android:id="@+id/not_started"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/confirm_unknown_datatype_not_started"
				android:textSize="15sp"/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/colon_route_name"
					android:textStyle="bold"
					android:textSize="15sp"/>
				<TextView
					android:id="@+id/identifier_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10dp"
					android:text="@string/error"
					android:textSize="15sp"/>
			</LinearLayout>

			<RadioGroup
				android:id="@+id/route_type"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="vertical">

				<RadioButton
					android:id="@+id/acceleration"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/acceleration"/>
				<RadioButton
					android:id="@+id/length_of_click"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/switch_length"/>
				<RadioButton
					android:id="@+id/number_of_clicks"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/switch_num"/>
				<RadioButton
					android:id="@+id/bing_battery"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/bing_battery"/>
				<RadioButton
					android:id="@+id/unknown"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/unknown_data"/>
			</RadioGroup>
		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_gravity="center"
		android:gravity="center"
		android:orientation="horizontal" >

		<Button
			style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
			android:id="@+id/btn_cancel"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@android:string/cancel"/>

		<Button
			style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
			android:id="@+id/btn_ok"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@android:string/ok"/>

	</LinearLayout>
</LinearLayout>