<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="5dp"
	android:animateLayoutChanges="true">
	
	
	
	
	
	<LinearLayout
		style="@style/AppTheme.BorderButton"
		android:id="@+id/btn_single_device"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:padding="5dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/btn_multiple_devices"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:gravity="center"
		android:orientation="vertical">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="0.7"
			android:gravity="center"
			android:text="@string/connect_to_single_device"
			android:textSize="18sp"
			android:textAllCaps="true"
			android:textColor="@android:color/black"
			android:textStyle="bold"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0.3"
			android:gravity="center"
			android:textSize="14sp"
			android:text="@string/desc_connect_to_single_device"/>
	</LinearLayout>


	<LinearLayout
		style="@style/AppTheme.BorderButton"
		android:id="@+id/btn_multiple_devices"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="10dp"
		android:padding="5dp"
		app:layout_constraintTop_toBottomOf="@id/btn_single_device"
		app:layout_constraintBottom_toTopOf="@id/btn_advanced"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:gravity="center"
		android:orientation="vertical">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="0.7"
			android:gravity="center"
			android:text="@string/program_multiple_devices"
			android:textSize="18sp"
			android:textAllCaps="true"
			android:textColor="@android:color/black"
			android:textStyle="bold"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0.3"
			android:gravity="center"
			android:textSize="14sp"
			android:text="@string/desc_program_multiple_devices"/>
	</LinearLayout>
	
	<TextView
		style="@style/AppTheme.BorderButton"
		android:id="@+id/btn_advanced"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:padding="0dp"
		app:layout_constraintTop_toBottomOf="@id/btn_multiple_devices"
		app:layout_constraintBottom_toTopOf="@id/btn_backup"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:gravity="center"
		android:text="@string/advanced_options"
		android:textSize="18sp"
		android:textAllCaps="true"
		android:textColor="@android:color/black"
		android:textStyle="bold"
		android:drawableStart="@drawable/ic_arrow_down_black"/>
	
	
	
	<androidx.constraintlayout.widget.ConstraintLayout
		style="@style/AppTheme.BorderButton"
		android:id="@+id/btn_backup"
		android:visibility="gone"
		android:layout_width="0dp"
		android:layout_height="100dp"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		app:layout_constraintTop_toBottomOf="@id/btn_advanced"
		app:layout_constraintBottom_toTopOf="@id/field_server_backup"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="@id/center_x"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="5dp"
		android:elevation="2dp">
		
		<at.jodlidev.metawear.study.Element_Tooltip_icon
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_gravity="top"
			app:tooltip_msg="@string/tooltip_backup"
			app:tooltip_gravity="top"/>
		<TextView
			android:id="@+id/backup_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/ic_backup_black"
			android:gravity="center"
			android:text="@string/btn_backup"
			android:textSize="16sp"
			android:textAllCaps="true"
			android:textColor="@android:color/black"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:gravity="top|center"
			android:textSize="12sp"
			android:text="@string/desc_backup"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@id/backup_header"
			app:layout_constraintBottom_toBottomOf="parent"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	
	
	<LinearLayout
		style="@style/AppTheme.BorderButton"
		android:id="@+id/btn_restore"
		android:visibility="gone"
		android:layout_width="0dp"
		android:layout_height="100dp"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		app:layout_constraintTop_toTopOf="@id/btn_backup"
		app:layout_constraintBottom_toBottomOf="@id/btn_backup"
		app:layout_constraintLeft_toLeftOf="@id/center_x"
		app:layout_constraintRight_toRightOf="parent"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="5dp"
		android:elevation="2dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/ic_restore_black"
			android:gravity="center"
			android:text="@string/btn_restore"
			android:textSize="16sp"
			android:textAllCaps="true"
			android:textColor="@android:color/black"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="top|center"
			android:textSize="12sp"
			android:text="@string/desc_restore"/>
	</LinearLayout>
	
	
	
	<androidx.constraintlayout.widget.ConstraintLayout
		style="@style/AppTheme.BorderBox"
		android:id="@+id/field_server_backup"
		android:visibility="gone"
		android:layout_width="0dp"
		android:layout_height="100dp"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		app:layout_constraintTop_toBottomOf="@id/btn_backup"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="5dp"
		android:elevation="2dp">
		
		<at.jodlidev.metawear.study.Element_Tooltip_icon
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_gravity="top"
			app:tooltip_msg="@string/tooltip_server_backup"
			app:tooltip_gravity="top"/>
		
		
		<TextView
			android:id="@+id/server_backup_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/ic_server_backup"
			android:gravity="center"
			android:text="@string/server_backup"
			android:textSize="16sp"
			android:textAllCaps="true"
			android:textColor="@android:color/black"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"/>
		
		<TextView
			android:id="@+id/server_url_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="https://"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/server_url"
			app:layout_constraintTop_toTopOf="@id/server_url"
			app:layout_constraintBottom_toBottomOf="@id/server_url"
			android:labelFor="@id/server_url"/>
		<EditText
			android:id="@+id/server_url"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:inputType="textUri"
			android:hint="@string/example_url"
			app:layout_constraintTop_toBottomOf="@id/server_backup_header"
			app:layout_constraintBottom_toTopOf="@id/appBackup_label"
			app:layout_constraintLeft_toRightOf="@id/server_url_label"
			app:layout_constraintRight_toLeftOf="@id/btn_test"/>
		
		<Button
			android:id="@+id/btn_test"
			style="@style/AppTheme.BorderButton"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:paddingStart="5dp"
			android:paddingEnd="5dp"
			android:minWidth="0dp"
			android:text="@string/btn_test"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="@id/server_url"
			app:layout_constraintBottom_toBottomOf="@id/server_url"/>
		
		<TextView
			android:id="@+id/appBackup_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/colon_appBackup_title"
			android:textSize="12sp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"/>
		<TextView
			android:id="@+id/appBackup_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:textSize="12sp"
			app:layout_constraintLeft_toRightOf="@id/appBackup_label"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/center_x"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>
