<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<androidx.viewpager.widget.ViewPager
		android:id="@+id/content_box"
		android:layout_width="0dp"
		android:layout_height="350dp"
		android:layout_margin="10dp"
		android:animateLayoutChanges="true"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	
	<CheckBox
		android:id="@+id/restore_switch_config"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:text="@string/restore_switch_config"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@id/restore_switch_config_info"
		app:layout_constraintTop_toBottomOf="@id/content_box"/>
	
	<at.jodlidev.metawear.study.Element_Tooltip_icon
		android:visibility="gone"
		android:id="@+id/restore_switch_config_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="top"
		app:tooltip_msg="@string/info_switch_macro_already_saved"
		app:tooltip_gravity="top"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@id/restore_switch_config"
		app:layout_constraintBottom_toBottomOf="@id/restore_switch_config"/>

	<Button
		style="@style/AppTheme.BorderButton"
		android:id="@+id/btn_back"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:padding="10dp"
		android:layout_gravity="center"
		android:text="@string/cancel"
		app:layout_constraintTop_toBottomOf="@id/restore_switch_config"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@id/btn_save"/>
	<Button
		style="@style/AppTheme.BorderButton"
		android:id="@+id/btn_save"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:padding="10dp"
		android:layout_gravity="center"
		android:text="@string/btn_forward"
		android:drawableEnd="@drawable/ic_forward_black"
		app:layout_constraintTop_toBottomOf="@id/restore_switch_config"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toRightOf="@id/btn_back"
		app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>